# vulnerable

./: .gitignore  README.md  docker-compose.yml  err.txt
Dome/: README.md  config.yml  install.sh  requirements.txt  waf.py
Dome/dome/: __init__.py  fingerprint.py  logger.py  notifiers.py  proxy.py
Dome/dome-rs/: Cargo.toml  config.yml  install.sh
Dome/dome-rs/src/: challenge.rs  config.rs  dashboard.rs  logger.rs  main.rs  notifiers.rs  proxy.rs  stats.rs
Dome/dome-rs/src/engine/: anomaly.rs  crlf.rs  crs.rs  fingerprint.rs  lfi.rs  libinject.rs  mod.rs  normaliser.rs  ratelimit.rs  rce.rs  reputation.rs  response.rs  scanner.rs  session.rs  sqli.rs  ssrf.rs  vpatch.rs  xss.rs  xxe.rs
Dome/dome/rules/: engine.py  lfi.py  ratelimit.py  rce.py  scanner.py  sqli.py  xss.py
bare-installs/: README.md  apache-snippet.conf  db-fix.sh  install.sh  nginx-snippet.conf  reset.sh
bare-installs/apps/: common.sh  install-bwapp.sh  install-hackazon.sh  install-juiceshop.sh  install-mutillidae.sh  install-wackopicko.sh  install-webgoat.sh  install-wrongsecrets.sh
configs/rsyslog/: rsyslog-apache.conf
configs/wordpress/: setup.sh
monitoring/filebeat/: filebeat.yml
monitoring/wazuh/: ossec-syslog-remote.conf  ossec.conf  wazuh-dashboard.yml  wazuh-indexer.yml
monitoring/wazuh/rules/: ctf_rules.xml
scripts/: attack-simulator.sh  gen-certs.sh  push-rules.sh  setup.sh
targets/ftp-target/: Dockerfile  backdoor_listener.py  entrypoint.sh  vsftpd.conf
targets/ssh-target/: Dockerfile  backup.sh  entrypoint.sh
