[package]
name = "dome-waf"
version = "1.0.0"
edition = "2021"
authors = ["Dome WAF"]
description = "Standalone high-performance WAF reverse proxy"
readme = "README.md"

[[bin]]
name = "dome"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio          = { version = "1",  features = ["full"] }

# HTTP server & client
axum           = { version = "0.7", features = ["http2"] }
hyper          = { version = "1",  features = ["full"] }
hyper-util     = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower          = "0.4"
tower-http     = { version = "0.5", features = ["trace", "timeout"] }

# HTTP client for upstream + notifications
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Config
serde          = { version = "1", features = ["derive"] }
serde_yaml     = "0.9"
serde_json     = "1"

# Regex (compiled once at startup)
regex          = "1"
once_cell      = "1"
libinjectionrs = "0.1.1"

# Lock-free concurrent data structures (rate limiter, reputation)
dashmap        = "6"

# CLI
clap           = { version = "4", features = ["derive"] }

# Logging / tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono         = { version = "0.4", features = ["serde"] }

# Error handling
anyhow         = "1"
thiserror      = "1"

# URL decoding / percent-encoding
percent-encoding = "2"

# Byte utils
bytes          = "1"

# Async traits
async-trait    = "0.1"

# PoW challenge verification
sha2           = "0.10"
hex            = "0.4"
base64         = "0.22"

# Syslog hostname
hostname       = "0.3"

# Form URL encoding (query parsing in engine)
form_urlencoded = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
